cleanup generated code and add devprod plugins